# udp

./: .gitignore  .gitmodules  CommonTestDefinitions.py  CommonTestFunctions.py  DC_04_07.json  README.md  adaptive_LQR_master.py  bionics.json  bionics.pyi  ctrl_comb.npy  data_collection_0407.py  data_collection_0425.py  data_collection_0426.py  data_collection_0518.py  data_collection_0620.py  plot_real_time.py  py_utils.py  pyproject.toml  requirements.txt  samples.txt  serial_log.txt  simple.ipynb  tcpClient.py  test.csv  test.ipynb  test_tcp_connection.py  udp.py  udp_core.py  ui.py  var_names.json
ExperimentData/DC_04_07/: 0_40_0.csv  0_40_100.csv  0_40_75.csv  0_48_50.csv  0_48_75.csv  0_57_100.csv  0_66_50.csv  (+27 more)
env/: bionics~.json  env.py  maps.py  online_cfg.json
experiment/: data_collection_0407.py  data_collection_0426.py  data_collection_0518.py  data_collection_0620.py  online_tuning_0620.py  online_tuning_0730.py  online_tuning_0826.py  online_tuning_1016.py  online_tuning_1126.py  simple.ipynb
outcmaes/: parameters.json2
pkm_app_def/: B3C_SW_BIONIC_COMM_Def.h  PKM_APP_DB_ApplicationStatsDef.h  PKM_APP_DB_BiometricParamsDef.h  PKM_APP_DB_SystemParamsDef.h  PKM_APP_DB_UserParamsDef.cpp  PKM_APP_DB_UserParamsDef.h  PKM_APP_DEF_DevParams.h  PKM_APP_DEF_Fatal.h  PKM_APP_TaskDeliberativeAIDef.h  PKM_APP_UserParamsDef.h  b3c_input_config.cpp  b3c_input_config.h  b3c_led_config.cpp  b3c_output_config.cpp
src/: adaptive_lqr_master.py  config.py  core.py  main.py  node_RL.py  node_interface.py  ossur_knee_tester.py  plot_real_time.py  ui.py  utils.py
(+29 files in other folders)
